--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.3",
+    "@ant-design/icons": "^5.2.6",
     "@supabase/ssr": "^0.1.0",
+    "@supabase/supabase-js": "^2.39.3",
     "antd": "^5.12.8",
     "next": "^14.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@ant-design/icons": "^5.2.6"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
-    "typescript": "^5.3.3",
     "eslint": "^8.56.0",
-    "eslint-config-next": "^14.1.0"
+    "eslint-config-next": "^14.1.0",
+    "pg": "^8.16.3",
+    "typescript": "^5.3.3"
   }
 }
-
