--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:reports": "node scripts/test-reports-api.js"
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
@@ -24,6 +25,7 @@
     "@types/react-dom": "^18.2.18",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
+    "node-fetch": "^2.7.0",
     "pg": "^8.16.3",
     "typescript": "^5.3.3"
   }
