--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "dayjs": "^1.11.19",
     "next": "^14.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "xlsx": "0.18.5"
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
