--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test:reports": "node scripts/test-reports-api.js"
+    "test:reports": "node scripts/test-reports-api.js",
+    "test:tagging": "node scripts/test-note-tagging-api.js"
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
